# exercise-pose-trainer

./: README.md  info.txt  pyproject.toml
high_plank_imgs/: features.joblib
models/fcnn/: model.joblib  model.keras
models/gradient_boosting/: model.joblib  model.onnx
models/logistic_regression/: model.joblib  model.onnx
models/random_forest/: model.joblib  model.onnx
models/svm/: model.joblib  model.onnx
src/exercise_pose_trainer/: __init__.py  rename_files.py  test.py  train.py  utils.py  view_report.py
src/exercise_pose_trainer/classes/: landmarker.py  model.py  point3d.py  utils.py
