[project]
name = "exercise-pose-trainer"
version = "0.1.0"
description = ""
authors = [
    {name = "rafael.santos",email = "rafaelsantos32141@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "skl2onnx (>=1.19.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "exercise_pose_trainer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "exercise_pose_trainer.train:main"
test = "exercise_pose_trainer.test:main"
